objects/Setup_Resource__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <inlineHelpText>Please provide all desired Access levels for the individual user before Saving.</inlineHelpText>
        <label>Access</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Resource_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Dispatcher</fullName>
                </value>
                <value>
                    <fullName>Gantt</fullName>
                    <label>Visible on Gantt</label>
                </value>
                <value>
                    <fullName>Create New Account</fullName>
                </value>
                <value>
                    <fullName>Time Entry Edit</fullName>
                </value>
                <value>
                    <fullName>Create New Maintenance Plan</fullName>
                </value>
                <value>
                    <fullName>Complete Forms</fullName>
                </value>
                <value>
                    <fullName>Crew Manager</fullName>
                </value>
                <value>
                    <fullName>Advanced CICO</fullName>
                </value>
                <value>
                    <fullName>Technician CICO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact (Internal, with WWID and NO IAM Classic user)</description>
        <label>User Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Internal__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Legacy_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.IAM_Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Contact.Created_User_Id__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Resource Setup</relationshipLabel>
        <relationshipName>Setup_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Distributor Branch Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Setup_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Service_Territory__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Please select the User&apos;s default Territory, so that the timezone can be defaulted.</inlineHelpText>
        <label>Primary Service Territory</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please do not select any umbrella location</errorMessage>
            <filterItems>
                <field>ServiceTerritory.Type__c</field>
                <operation>notEqual</operation>
                <value>GROUP</value>
            </filterItems>
            <infoMessage>Please do not select any umbrella location</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipName>Setup_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Type__c</fullName>
        <label>Resource Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bay</fullName>
                </value>
                <value>
                    <fullName>Tool</fullName>
                </value>
                <value>
                    <fullName>Technician</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Service_Territory__c</fullName>
        <label>Root Service Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Resource Created As per the setup</description>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipName>Setup_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tool_Bay_Name__c</fullName>
        <label>Tool / Bay Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tech, Advanced already setup as Active User in Classic or FSL</description>
        <label>Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>CSS_Service_Advanced, CSS_Service_Technician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Setup_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WWID__c</fullName>
        <formula>User__r.IAM_UID__c</formula>
        <label>WWID</label>
        <type>Text</type>
    </fields>
    <label>Resource Setup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>User__c</columns>
        <columns>WWID__c</columns>
        <columns>Name__c</columns>
        <columns>Resource_Type__c</columns>
        <columns>Access__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Primary_Service_Territory__c</columns>
        <columns>Service_Resource__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>System ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resources Setup</pluralLabel>
    <recordTypes>
        <fullName>Convert_Classic_User</fullName>
        <active>true</active>
        <description>Select this option to pick existing Classic user and grant them Evolution Role and access to provide Advanced or Technician User based functionalities.</description>
        <label>Convert Classic User</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default_Edit</fullName>
        <active>true</active>
        <description>Provides related lists of both STM &amp; UT</description>
        <label>Default Edit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_with_STM</fullName>
        <active>true</active>
        <label>Edit with STM</label>
    </recordTypes>
    <recordTypes>
        <fullName>Edit_with_UT</fullName>
        <active>true</active>
        <label>Edit with UT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tool_and_Bay</fullName>
        <active>true</active>
        <description>Select this option to create and setup a new Tool or Bay and assign to a Service Territory.</description>
        <label>Tool and Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>WWID_New_User</fullName>
        <active>true</active>
        <description>Select this option to create and setup a new Guidanz Advanced or Technician User who has a WWID created through Cummins HR Onboarding process (WWIMS).</description>
        <label>WWID New User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>